[package]
name = "sblog"
version = "0.1.0"
authors = ["heng30 <2238288979@qq.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
platform-dirs = "0.3"
anyhow = "1.0"
md5 = "0.7"
notify = "6.1"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.5"
pulldown-cmark = "0.9"
atom_syndication = "0.12"

tokio = {version = "1.32", features = ["full"]}
